--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <title>Document</title>
 </head>
 <body>
-<h1>Hello</h1>
+    <header>
+        <nav>
+          <a href="">Brit<span>lex</span></a>
+          <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Skills</a></li>
+            <li><a href="">About Us</a></li>
+            <li><a href="">Pricing</a></li>
+            <li><a href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <button>Let’s Talk</button>
+      </header>
 </body>
 </html>
