--- a/index.html
+++ b/index.html
@@ -1,24 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <nav>
-          <a href="">Brit<span>lex</span></a>
-          <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">Skills</a></li>
-            <li><a href="">About Us</a></li>
-            <li><a href="">Pricing</a></li>
-            <li><a href="">Contacts</a></li>
-          </ul>
-        </nav>
-        <button>Let’s Talk</button>
-      </header>
-</body>
+      <nav>
+        <a href="">Brit<span>lex</span></a>
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">Skills</a></li>
+          <li><a href="">About Us</a></li>
+          <li><a href="">Pricing</a></li>
+          <li><a href="">Contacts</a></li>
+        </ul>
+      </nav>
+      <button>Let’s Talk</button>
+    </header>
+    <main>
+      <section>
+        <h1>Learn Any Foreign Language</h1>
+        <p>
+          With our teachers who write a program for each student, you will be able to make your
+          first sketch after the first lesson.
+        </p>
+        <button>Get started</button>
+        <img src="./images/learning-languages.png" alt="learning languages" />
+      </section>
+    </main>
+  </body>
 </html>
