--- a/index.html
+++ b/index.html
@@ -28,7 +28,47 @@
           first sketch after the first lesson.
         </p>
         <button>Get started</button>
-        <img src="./images/learning-languages.png" alt="learning languages" />
+        <img src="./images/learning-languages.png" alt="Learning languages" />
+      </section>
+      <section>
+        <h2>Skills</h2>
+        <ul>
+            <li>
+                <img src="./images/Shared goals-bro 1.png" alt="Shared goals-bro">
+                <h3>Speaking</h3>
+                <p>Improve your English skills and confidence. 
+                    Live classes and interactive lessons online. 
+                    20% extra free for a limited time only
+                    
+                    Learn English online and improve your 
+                    skills through our high-quality courses
+                    and resources – all designed for adult language learners.</p>
+                <button>Learn more</button>
+            </li>
+            <li>
+                <img src="./images/Typewriter-bro 1.png" alt="Typewriter-bro">
+                <h3>Writing</h3>
+                <p>One of the most important and extensive 
+                    areas of natural science, the science that 
+                    studies substances, also their composition </p>
+                <button>Learn more</button>
+            </li>
+            <li>
+                <img src="./images/House bookshelves-bro 1.png" alt="House bookshelves-bro">
+                <h3>Reading</h3>
+                <p>Perception and response actions of the user
+                    resulting from the use and/or upcoming use 
+                    of the product, system or service</p>
+                <button>Learn more</button>
+            </li>
+            <li>
+                <img src="./images/Podcast audience-bro 1.png" alt="Podcast audience-bro">
+                <h3>Listening</h3>
+                <p>Here you can find activities to practise
+                    your listening skills. Listening will help you to improve your understanding </p>
+                <button>Learn more</button>
+            </li>
+        </ul>
       </section>
     </main>
   </body>
