--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           With our teachers who write a program for each student, you will be able to make your
           first sketch after the first lesson.
         </p>
-        <button>Get started</button>
+        <button type="button">Get started</button>
         <img src="./images/learning-languages.png" alt="Learning languages" />
       </section>
       <section>
@@ -43,7 +43,7 @@
                     Learn English online and improve your 
                     skills through our high-quality courses
                     and resources – all designed for adult language learners.</p>
-                <button>Learn more</button>
+                <button type="button">Learn more</button>
             </li>
             <li>
                 <img src="./images/Typewriter-bro 1.png" alt="Typewriter-bro">
@@ -51,7 +51,7 @@
                 <p>One of the most important and extensive 
                     areas of natural science, the science that 
                     studies substances, also their composition </p>
-                <button>Learn more</button>
+                <button type="button">Learn more</button>
             </li>
             <li>
                 <img src="./images/House bookshelves-bro 1.png" alt="House bookshelves-bro">
@@ -59,16 +59,19 @@
                 <p>Perception and response actions of the user
                     resulting from the use and/or upcoming use 
                     of the product, system or service</p>
-                <button>Learn more</button>
+                <button type="button">Learn more</button>
             </li>
             <li>
                 <img src="./images/Podcast audience-bro 1.png" alt="Podcast audience-bro">
                 <h3>Listening</h3>
                 <p>Here you can find activities to practise
                     your listening skills. Listening will help you to improve your understanding </p>
-                <button>Learn more</button>
+                <button type="button">Learn more</button>
             </li>
         </ul>
+      </section>
+      <section>
+
       </section>
     </main>
   </body>
